# roughneck

./: .gitignore  Cargo.toml  IDEA.md  README.md  roughneck.toml.example
.github/workflows/: ci.yml
crates/roughneck-cli/: Cargo.toml
crates/roughneck-cli/src/: lib.rs  main.rs  tui.rs
crates/roughneck-core/: Cargo.toml
crates/roughneck-core/src/: backend.rs  config.rs  error.rs  lib.rs  types.rs
crates/roughneck-fs/: Cargo.toml
crates/roughneck-fs/src/: backend.rs  lib.rs  tools.rs
crates/roughneck-mcp/: Cargo.toml
crates/roughneck-mcp/src/: lib.rs
crates/roughneck-memory/: Cargo.toml
crates/roughneck-memory/src/: lib.rs
crates/roughneck-node/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
crates/roughneck-node/scripts/: build-local.mjs
crates/roughneck-node/src/: lib.rs
crates/roughneck-node/tests/: runtime-smoke.cjs  typecheck-smoke.ts
crates/roughneck-py/: .gitignore  Cargo.toml  pyproject.toml  roughneck_py.pyi
crates/roughneck-py/python/roughneck_py/: __init__.py  __init__.pyi
crates/roughneck-py/scripts/: build-local.sh
crates/roughneck-py/src/: lib.rs
crates/roughneck-py/tests/: runtime_smoke.py  typecheck_smoke.py
crates/roughneck-runtime/: Cargo.toml
crates/roughneck-runtime/src/: extensions.rs  hooks.rs  lib.rs  tools.rs
crates/roughneck-skills/: Cargo.toml
crates/roughneck-skills/src/: lib.rs
docs/superpowers/plans/: 2026-03-10-cyberpunk-tui.md
docs/superpowers/specs/: 2026-03-10-cyberpunk-tui-design.md
examples/basic_agent/: Cargo.toml
examples/basic_agent/src/: main.rs
examples/node_binding/: example.ts
examples/python_binding/: example.py
