[workspace]
resolver = "2"
members = [
  "crates/roughneck-core",
  "crates/roughneck-runtime",
  "crates/roughneck-fs",
  "crates/roughneck-memory",
  "crates/roughneck-skills",
  "crates/roughneck-mcp",
  "crates/roughneck-cli",
  "crates/roughneck-py",
  "crates/roughneck-node",
]
default-members = [
  "crates/roughneck-core",
  "crates/roughneck-runtime",
  "crates/roughneck-fs",
  "crates/roughneck-memory",
  "crates/roughneck-skills",
  "crates/roughneck-mcp",
  "crates/roughneck-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Roughneck Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
napi = { version = "2", default-features = false, features = ["napi8", "tokio_rt", "serde-json", "dyn-symbols"] }
napi-derive = "2"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
pyo3-build-config = "0.23"
regex = "1.11"
rig-core = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
walkdir = "2.5"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
