[package]
name = "roughneck-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
roughneck-core = { path = "../roughneck-core" }
roughneck-runtime = { path = "../roughneck-runtime" }

[lints]
workspace = true
