[package]
name = "roughneck-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
globset.workspace = true
regex.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true
roughneck-core = { path = "../roughneck-core" }

[lints]
workspace = true
