[package]
name = "roughneck-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
roughneck-core = { path = "../roughneck-core" }

[lints]
workspace = true
