[package]
name = "roughneck-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
pyo3.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
roughneck-core = { path = "../roughneck-core" }
roughneck-runtime = { path = "../roughneck-runtime" }

[build-dependencies]
pyo3-build-config.workspace = true

[lints]
workspace = true
