[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "roughneck-py"
description = "Python bindings for the Roughneck deep-agent runtime"
readme = "../../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Roughneck Contributors" }]
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "roughneck_py._roughneck_py"
