[package]
name = "roughneck-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
globset.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
roughneck-core = { path = "../roughneck-core" }
roughneck-fs = { path = "../roughneck-fs" }
roughneck-memory = { path = "../roughneck-memory" }
roughneck-skills = { path = "../roughneck-skills" }
roughneck-mcp = { path = "../roughneck-mcp" }

[lints]
workspace = true
