[package]
name = "roughneck-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
walkdir.workspace = true
roughneck-core = { path = "../roughneck-core" }

[lints]
workspace = true
